--- a/features/times/src/main/res/layout/vakit_notprefs_item.xml
+++ b/features/times/src/main/res/layout/vakit_notprefs_item.xml
@@ -538,6 +538,7 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/foreground"
                 android:text="@string/addAudio" />
 
         </LinearLayout>
@@ -689,6 +690,7 @@
             android:layout_marginTop="8dp"
             android:backgroundTint="@color/alert"
             android:text="@string/delete"
+            android:textColor="@color/foreground"
             app:layout_constraintTop_toBottomOf="@+id/deleteAfterSound" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
