export calendar as ics

--- a/features/settings/src/main/res/xml/settings.xml
+++ b/features/settings/src/main/res/xml/settings.xml
@@ -39,8 +39,7 @@
             android:title="@string/numbers" />
 
 
-        <com.metinkale.prayer.settings.CalendarIntegrationPreference
-            android:defaultValue="-1"
+        <Preference
             android:key="calendarIntegration"
             android:title="@string/calendarIntegration" />
 
