bugfixes + backup/restore rewrite

--- a/features/settings/src/main/res/layout/settings_backuprestore.xml
+++ b/features/settings/src/main/res/layout/settings_backuprestore.xml
@@ -21,13 +21,16 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:onClick="backup"
         android:text="@string/backup" />
 
-    <ListView
-        android:id="@+id/listView1"
+    <Button
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ListView>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:onClick="restore"
+        android:text="@string/restore" />
 
 </LinearLayout>
