--- a/features/times/src/main/res/layout-v24/notification_layout_large.xml
+++ b/features/times/src/main/res/layout-v24/notification_layout_large.xml
@@ -15,43 +15,26 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/notification"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:orientation="vertical"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingBottom="2dp">
-
-        <ImageView
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_gravity="center"
-            android:layout_marginEnd="4dp"
-            android:src="@drawable/ic_abicon"
-            android:tint="@color/colorPrimary"
-            app:tint="@color/colorPrimary"
-            tools:ignore="UseAppTint" />
-
+        android:layout_height="wrap_content">
         <TextView
-            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
+            style="@style/TextAppearance.Compat.Notification.Title"
             android:id="@android:id/title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Braunschweig" />
 
+
         <Chronometer
-            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"
+            style="@style/TextAppearance.Compat.Notification.Title"
             android:id="@+id/countdown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -59,8 +42,10 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/times"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="2dp"
         android:baselineAligned="false">
 
         <LinearLayout
@@ -70,7 +55,7 @@
             android:gravity="center">
 
             <TextView
-                android:textAppearance="@android:style/TextAppearance.Material.Notification.Line2"
+                style="@style/TextAppearance.Compat.Notification.Line2"
                 android:id="@+id/time0"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
@@ -79,7 +64,7 @@
                 android:text="00:00" />
 
             <TextView
-                android:textAppearance="@android:style/TextAppearance.Material.Notification.Line2"
+                style="@style/TextAppearance.Compat.Notification.Line2"
                 android:id="@+id/fajr"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
@@ -100,7 +85,7 @@
             android:gravity="center">
 
             <TextView
-                android:textAppearance="@android:style/TextAppearance.Material.Notification.Line2"
+                style="@style/TextAppearance.Compat.Notification.Line2"
                 android:id="@+id/time1"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
@@ -109,7 +94,7 @@
                 android:text="00:00" />
 
             <TextView
-                android:textAppearance="@android:style/TextAppearance.Material.Notification.Line2"
+                style="@style/TextAppearance.Compat.Notification.Line2"
                 android:id="@+id/sun"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
@@ -130,7 +115,7 @@
             android:gravity="center">
 
             <TextView
-                android:textAppearance="@android:style/TextAppearance.Material.Notification.Line2"
+                style="@style/TextAppearance.Compat.Notification.Line2"
                 android:id="@+id/time2"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
@@ -139,7 +124,7 @@
                 android:text="00:00" />
 
             <TextView
-                android:textAppearance="@android:style/TextAppearance.Material.Notification.Line2"
+                style="@style/TextAppearance.Compat.Notification.Line2"
                 android:id="@+id/zuhr"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
@@ -166,7 +151,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="00:00"
-                android:textAppearance="@android:style/TextAppearance.Material.Notification.Line2" />
+                style="@style/TextAppearance.Compat.Notification.Line2" />
 
             <TextView
                 android:id="@+id/asr"
@@ -175,7 +160,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/asr"
-                android:textAppearance="@android:style/TextAppearance.Material.Notification.Line2" />
+                style="@style/TextAppearance.Compat.Notification.Line2" />
         </LinearLayout>
 
         <TextView
@@ -190,7 +175,7 @@
             android:gravity="center">
 
             <TextView
-                android:textAppearance="@android:style/TextAppearance.Material.Notification.Line2"
+                style="@style/TextAppearance.Compat.Notification.Line2"
                 android:id="@+id/time4"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
@@ -205,7 +190,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/maghrib"
-                android:textAppearance="@android:style/TextAppearance.Material.Notification.Line2" />
+                style="@style/TextAppearance.Compat.Notification.Line2" />
         </LinearLayout>
 
         <TextView
@@ -220,7 +205,7 @@
             android:gravity="center">
 
             <TextView
-                android:textAppearance="@android:style/TextAppearance.Material.Notification.Line2"
+                style="@style/TextAppearance.Compat.Notification.Line2"
                 android:id="@+id/time5"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
@@ -229,7 +214,7 @@
                 android:text="00:00"/>
 
             <TextView
-                android:textAppearance="@android:style/TextAppearance.Material.Notification.Line2"
+                style="@style/TextAppearance.Compat.Notification.Line2"
                 android:id="@+id/ishaa"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
@@ -237,8 +222,6 @@
                 android:gravity="center"
                 android:text="@string/ishaa" />
         </LinearLayout>
-
-
     </LinearLayout>
 
 </LinearLayout>
