--- a/features/times/src/main/res/menu/vakit.xml
+++ b/features/times/src/main/res/menu/vakit.xml
@@ -36,4 +36,9 @@
         android:title="@string/share"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/settings"
+        android:title="@string/settings"
+        app:showAsAction="never" />
+
 </menu>
