--- a/features/intro/src/main/res/layout/intro_menu.xml
+++ b/features/intro/src/main/res/layout/intro_menu.xml
@@ -23,6 +23,7 @@
 
     <TextView
         android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:gravity="center"
         android:padding="20dp"
         android:text="@string/intro_menu"
