--- a/features/intro/src/main/res/layout/intro_pager.xml
+++ b/features/intro/src/main/res/layout/intro_pager.xml
@@ -23,6 +23,7 @@
 
     <TextView
         android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:autoSizeTextType="uniform"
         app:layout_heightPercent="17.5%"
         android:padding="20dp"
