--- a/features/base/src/main/res/xml/filepaths.xml
+++ b/features/base/src/main/res/xml/filepaths.xml
@@ -15,6 +15,6 @@
   -->
 
 <paths>
-    <cache-path name="*.csv" />
-    <cache-path name="*.pdf" />
+    <cache-path name="*.csv" path="." />
+    <cache-path name="*.pdf" path="." />
 </paths>
